Oauth login 기능 구현중.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "server=localhost;port=3306;database=jongwoon;user=root;pwd=1234;"
   },
-  "OauthKey": "oauth:tuh4xin4fw74126d370gq1ddp1f1wg"
+  "Client_Secret": "i6px3jq56vdiy5tl1gzvwghehac63z"
 }
