하드 코딩된 client_id 상수화, DefaultIP appsettings 로 이동

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=jongwoon;user=root;pwd=1234;"
+    "DefaultConnection": "server=localhost;port=3306;database=jongwoon;user=root;pwd=1234;",
+    "DefaultIP": "localhost:44348"
   },
   "Client_Secret": "i6px3jq56vdiy5tl1gzvwghehac63z"
 }
