코로나 확진자 명령어 추가. (IHostedService로 매 주기마다 값 갱신)

--- a/TwitchChatBot.csproj
+++ b/TwitchChatBot.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.25" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="91.0.4472.10100" />
   </ItemGroup>
 
 </Project>
